--- a/theme/assets/theme.css
+++ b/theme/assets/theme.css
@@ -1058,3 +1058,8 @@ div.plot-container.plotly svg.main-svg {
     --anvil-spinner-bg: %color:Surface Variant%;
 }
 
+.fremtidig-dag {
+  opacity: 0.5;
+  border-radius: 16px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+}
